media/css/yasp.css
/* =Layout */

body {
    padding-top: 60px;
}

.logo-img {
	height: 25px;
	margin-right: 15px;
    margin-top: 7px;
}

section {
    padding-top: 45px;
    padding-left: 10px;
}

#content section:first-child {
    padding-top: 0;
}

.dashboard {
	padding-bottom: 25px;
}

.fixed-height {
    min-height: 260px;
    overflow: hidden;
}

.fixed-height500 {
    min-height: 480px;
    overflow: hidden;
}

dl.dl-stats {
}

dl.dl-stats dt {
    width: 60px !important;
}

dl.dl-stats dt span {
    padding: 10px 15px;
}

dl.dl-stats dd {
    margin-left: 80px !important;
}

.section-split {
    height: 50px;
}

/* =tables */
.statbox-table, statbox-table-small {
    width: 100%;
}

.statbox-head {
    text-align: center !important;
}

.statbox-table td {
    width: 20%;
    text-align: right;
}

.statbox-table td.desc {
    width: 30%;
    text-align: left;
}

.statbox-table-small td {
    width: 25%;
    text-align: right;
}

.statbox-table-small td:nth-child(even), .statbox-table-small th:nth-child(even) {
    width: 75%;
    text-align: left;
}

/* =Format */

.table.no-border td, .table.no-border th {
    border: 0;
}

.table.th {
	text-align: center !important;
}

.custom-well {
	background: #faffff;
}


.player-search {
	position: relative;
	bottom: 50px;
}

.player-heads {
	margin: 1px;
}

.sort-button {
    cursor: pointer;
}


/* =ajax-loader */
.ajax-loader {
    position: absolute;
    top: 60px;
    left: 10px;
    z-index: 99;
    padding: 10px 20px;
}

/* =Misc */

.page-width {
	width: 90%;
	min-width: 700px !important;
	max-width: 1150px !important;
}

.force-center {
	text-align: center;
	margin: 0 auto;
}

.no-margins {
	margin: 0px !important;
}

.img-thumb {
	width: 20px !important;
	height: 20px !important;
}

.no-img {
	padding: 15px !important;
}

.grid-img {
    padding: 6px;
}


/* =Sidebar */
.nav-sidebar {
    position: fixed;
    padding: 9px 0;
    width: 155px;
}

@media (max-width: 976px) {
    .nav-sidebar {
        position: static;
        margin-left: -32px;
        width: 150px;
    }
}

@media (max-width: 767px) {
    .nav-sidebar {
        position: static;
        width: auto;
        margin-left: 0;
    }
}

/* =player head */
#playerhead-bars {
    width: 365px;
}

@media (max-width: 979px) {
    #playerhead-bars {
        display: none;
    }
}

.bar-container {
    height: 9px;
    width: 9px;
    background-repeat: no-repeat;
    float: left;
    margin-right: 1px;
}

.bar-container img {
    vertical-align: top;
}

.xpbar-container {
    position: relative;
    height: 10px;
    width: 364px;
    background-image: url("../img/misc/xpbar-bg.png");
    background-position: top left;
    background-repeat: no-repeat;
}

.xpbar-cur {
    position: absolute;
    left: 0;
    top: -25px;
    width: 364px;
    text-align: center;
    font-size: 10px;
    font-weight: bold;
    color: #51a351;
}

.xpbar {
    height: 10px;
    background-image: url("../img/misc/xpbar-full.png");
    background-repeat: no-repeat;
    background-position: top left;
}

.player-status {
    position: absolute;
    top: -10px;
    left: 40px;
}

/* =Bootstrap */

.alert p {
    margin: 0;
}

.force-right {
    text-align: right;
}

.grid {
    min-height: 30px;
    margin-top: 10px;
    margin-bottom: 18px;
    margin-left: 10px;
}

